# SegmentfaultCatcher

./: CMakeLists.txt  SegmentfaultCatcher.h  readme  test.cpp
